# recipe-xml-converter

./: .flake8  Procfile  README.md  pyproject.toml  requirements.txt
data/: 1.xml  10.xml  11.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9.xml  recipe.xsl  transform.xsl
data/stylesheets/: normalize_space.xsl  transform.xsl
frontend/: index.html
frontend/js/: main.js
recipe_xml_converter/: api.py  cli.py  config.py  converter.py  exceptions.py  helpers.py  main.py  orchestrator.py  transformer.py
static/: index.html
static/js/: main.js
stylesheets/: group.xsl  transform.xsl
tests/: fixtures.py  test_menu.py  test_recipe_directions.py  test_recipe_head.py  test_recipe_ingredients.py  test_recipe_meta.py
